--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Йога это ахуенно</title>
+    <title>BerYoga</title>
     <link rel="stylesheet" href="css/style.css">
 
   </head>
@@ -21,7 +21,7 @@
                 <a class="active" href="#">Home</a>
               </li>
               <li class="header-nav-ul__item">
-                <a href="#">About As</a>
+                <a href="#">About Us</a>
               </li>
               <li class="header-nav-ul__item">
                 <a href="#">Contact</a>
@@ -31,7 +31,7 @@
               </li>
             </ul>
           </nav>
-          <button class="header-menu__auth header-menu-auth">
+          <button class="header-menu__auth">
             Login
           </button>
         </div>
