--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <header class="header">
       <div class="container">
         <div class="header-menu">
-          <div class="header-menu__logo">
+          <div class="header-menu-logo header-menu__logo">
               BerYoga
           </div>
           <nav class="header-nav">
@@ -35,22 +35,27 @@
             Login
           </button>
         </div>
-        <article class="header-content">
-          <h2 class="header-content__title global-title">Beautiful videos. Become your best self with BerYoGa.</h2>
-          <p class="header-content__text global-description">
-            For me, BerYoga is more than just a sport – it is lifestyle, a state mind, a philosophy.
-            Now I decided to open BerYoga so that I can share my love and joy of bikram yoga.  It is my hope that you too can discover
-             all the positive impacts of bikram yoga and make bikram yoga as a part of your life.
-          </p>
-          <div class="header-content-toolbar">
-            <button class="header-content-toolbar__service">Service</button>
-            <button class="header-content-toolbar__signUp">Sign Up</button>
-          </div>
-        </article>
       </div>
     </header>
 
     <main>
+
+      <section class="main">
+        <div class="container">
+          <article class="main-content">
+            <h2 class="main-content__title global-title">Beautiful videos. Become your best self with BerYoGa.</h2>
+            <p class="main-content__text global-description">
+              For me, BerYoga is more than just a sport – it is lifestyle, a state mind, a philosophy.
+              Now I decided to open BerYoga so that I can share my love and joy of bikram yoga.  It is my hope that you too can discover
+               all the positive impacts of bikram yoga and make bikram yoga as a part of your life.
+            </p>
+            <div class="main-content-toolbar">
+              <button class="main-content-toolbar__service">Service</button>
+              <button class="main-content-toolbar__signUp">Sign Up</button>
+            </div>
+          </article>
+        </div>
+      </section>
       <section class="choose">
         <div class="container">
           <div class="choose-name">
@@ -87,7 +92,7 @@
         <div class="container">
           <div class="whats-on-wrapper">
             <div class="whats-on-wrapper-left">
-              <img src="img/whats-on/img.png" alt="" class="whats-on-wrapper-left__image">
+              <img src="img/whats-on/img.png" alt="" class="whats-on-wrapper-left__image img100">
             </div>
             <div class="whats-on-wrapper-right">
               <div class="whats-on-wrapper-right__title global-title">What’s on BerYoga?</div>
@@ -134,7 +139,7 @@
               
             </div>
             <div class="power-wrapper-right">
-              <img src="img/power/healing.png" alt="" class="power-wrapper-right__image">
+              <img src="img/power/healing.png" alt="" class="power-wrapper-right__image img100">
             </div>
           </div>
         </div>
@@ -148,7 +153,7 @@
         <div class="container">
           <div class="ways-wrapper">
             <div class="ways-wrapper-left">
-              <img src="img/ways/fitness.png" alt="" class="ways-wrapper-left__image">
+              <img src="img/ways/fitness.png" alt="" class="ways-wrapper-left__image img100">
             </div>
             <div class="ways-wrapper-right">
               <div class="ways-wrapper-right__title global-title">
